some changes in js

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header class="header ">
       <div class="container-xxl container">
         <div class="row">
-          <nav class="header-nav burger-menu lock-padding">
+          <nav class="header-nav burger-menu">
             <ul class="header-list offset-xl-7 col-xl-5">
               <li class="header-list__item">
                 <a href="#about_me" class="header-list__link">
@@ -151,13 +151,13 @@
           <div id="popup" class="popup popup-1">
             <div class="container popup-container">
               <div class="row popup__content">
-                <a href="#" class="close">x</a>
-                <!-- <button class="close">
+                <!-- <a href="#" class="close">x</a> -->
+                <button class="close">
                 <div class="">
                   <div class="leftright"></div>
                   <div class="rightleft"></div>
                 </div>
-              </button> -->
+              </button>
                 <div class="col-xl-6 col-md-6 popup-img  popup-img__1">
                   <img class="popup-img__item" src="./img/popup-1.png" alt="">
                 </div>
