--- a/index-ru.html
+++ b/index-ru.html
@@ -46,7 +46,7 @@
             </li>
             <li class="header-list__item">
               <!-- <a href="index-ru.html" class="header-list__lang">RU</a> -->
-              <button class="header-list__lang" onclick="window.location.href = './index.html'">EN</button>
+              <button class="header-list__lang" onclick="window.location.href = '/'">EN</button>
             </li>
           </ul>
           <a href="" class="burger-menu_button">
